fixed overflow in mobile browser

--- a/Frontend/src/Component/Navbar/Navbar.css
+++ b/Frontend/src/Component/Navbar/Navbar.css
@@ -154,5 +154,6 @@ nav > button:hover {
 
 .sidebar.closed {
   opacity: 0;
+  display: none;
   transform: translateX(100%); /* Slide out of view */
 }
